# models/UserBasic.go
@@ -35,6 +35,9 @@ func CreateUser(user UserBasic) *gorm.DB {
 func DeleteUser(user UserBasic) *gorm.DB {
 	return utils.DB.Delete(&user)
 }
+func UpdateUser(user UserBasic) *gorm.DB {
+	return utils.DB.Model(&user).Updates(UserBasic{Name: user.Name, PassWord: user.PassWord})
+}
 func GetUserList() []*UserBasic {
 	data := make([]*UserBasic, 10)
 	utils.DB.Find(&data)
