# router/app.go
@@ -19,5 +19,7 @@ func Router() *gin.Engine {
 	r.GET("/user/GetUserList", service.GetUserList)
 	r.GET("/user/CreateUser", service.CreateUser)
 	r.GET("/user/DeleteUser", service.DeleteUser)
+	r.POST("/user/UpdateUser", service.UpdateUser)
+
 	return r
 }
