# service/user_service.go
@@ -1,6 +1,7 @@
 package service
 
 import (
+	"fmt"
 	"gochat/models"
 	"strconv"
 
@@ -37,6 +38,7 @@ func CreateUser(c *gin.Context) {
 		c.JSON(-1, gin.H{
 			"message": "Invalid password",
 		})
+		return
 	}
 	user.PassWord = password
 	models.CreateUser(user)
@@ -58,5 +60,29 @@ func DeleteUser(c *gin.Context) {
 	models.DeleteUser(user)
 	c.JSON(200, gin.H{
 		"message": "Delete User!",
+	})
+}
+
+// UpdateUser
+// @Summary update user
+// @Tags userpage
+// @param id formData string false "id"
+// @param name formData string false "name"
+// @param password formData string false "password"
+// @Success 200 {string} json{"code", "message"}
+// @Router /user/UpdateUser [post]
+func UpdateUser(c *gin.Context) {
+	// fmt.Println("call!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!")
+	user := models.UserBasic{}
+	id, _ := strconv.Atoi(c.PostForm("id"))
+	user.ID = uint(id)
+	user.Name = c.PostForm("name")
+	user.PassWord = c.PostForm("password")
+
+	fmt.Println("update :", user)
+
+	models.UpdateUser(user)
+	c.JSON(200, gin.H{
+		"message": "Updated User!",
 	})
 }
